--- a/Teamply/Teamply/Screen/Home/mainHome/Home.storyboard
+++ b/Teamply/Teamply/Screen/Home/mainHome/Home.storyboard
@@ -272,7 +272,7 @@
                                     <constraint firstAttribute="height" constant="47" id="CfE-nX-Dzd"/>
                                 </constraints>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" title="Button" image="attend">
+                                <state key="normal" title="Button" image="modify">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
@@ -286,7 +286,7 @@
                                     <constraint firstAttribute="height" constant="47" id="XEU-Qn-3SP"/>
                                 </constraints>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" title="Button" image="create">
+                                <state key="normal" title="Button" image="copy">
                                     <color key="titleColor" name="basic2"/>
                                 </state>
                                 <connections>
@@ -323,11 +323,11 @@
         <image name="Logo" width="381" height="381"/>
         <image name="Teamply" width="687" height="199"/>
         <image name="add_project" width="23" height="24"/>
-        <image name="attend" width="21" height="21"/>
         <image name="close" width="15" height="14"/>
-        <image name="create" width="21" height="21"/>
+        <image name="copy" width="21" height="21"/>
         <image name="home" width="22" height="22"/>
         <image name="home_selected" width="22" height="22"/>
+        <image name="modify" width="21" height="21"/>
         <namedColor name="basic1">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
