--- a/Teamply/Teamply/Screen/MyPage/MyPage.storyboard
+++ b/Teamply/Teamply/Screen/MyPage/MyPage.storyboard
@@ -119,11 +119,15 @@
                                     </label>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <gestureRecognizers/>
                                 <constraints>
                                     <constraint firstItem="zIo-bV-XZW" firstAttribute="leading" secondItem="mYe-Dy-0F1" secondAttribute="leading" constant="24" id="iVc-yS-2Ly"/>
                                     <constraint firstAttribute="height" constant="58" id="oQM-j7-5i6"/>
                                     <constraint firstItem="zIo-bV-XZW" firstAttribute="top" secondItem="mYe-Dy-0F1" secondAttribute="top" constant="19" id="s5a-8J-R5y"/>
                                 </constraints>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="ckf-5l-ddy" appends="YES" id="8Ty-mn-z1y"/>
+                                </connections>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4XN-p1-EJm">
                                 <rect key="frame" x="0.0" y="337" width="393" height="3"/>
@@ -214,6 +218,11 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="ckf-5l-ddy">
+                    <connections>
+                        <action selector="meetingScheduleTap:" destination="Y6W-OH-hqX" id="PmK-F8-NpO"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="49.618320610687022" y="-2.1126760563380285"/>
         </scene>
