--- a/Teamply/Teamply/Screen/MyPage/MeetingScheduleManagement/MeetingSchedule.storyboard
+++ b/Teamply/Teamply/Screen/MyPage/MeetingScheduleManagement/MeetingSchedule.storyboard
@@ -26,6 +26,9 @@
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="back"/>
+                                <connections>
+                                    <action selector="backToMypage:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="SYf-i3-MYX"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xR8-7L-mpA">
                                 <rect key="frame" x="113" y="71" width="167" height="29"/>
@@ -84,9 +87,10 @@
                                     <constraint firstAttribute="height" constant="453" id="jHz-af-xbj"/>
                                 </constraints>
                             </stackView>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="x3k-vN-8Dx">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="x3k-vN-8Dx">
                                 <rect key="frame" x="59" y="228.66666666666663" width="300" height="457"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <gestureRecognizers/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="300" id="XRD-PH-i0c"/>
                                     <constraint firstAttribute="height" constant="457" id="wp4-Rn-NGC"/>
@@ -98,15 +102,19 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="timeViewCell" id="utT-30-Oy8">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="timeViewCell" id="utT-30-Oy8" customClass="TimeViewCell" customModule="Teamply" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="xAi-Pp-64L">
                                             <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </collectionViewCellContentView>
+                                        <gestureRecognizers/>
                                     </collectionViewCell>
                                 </cells>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="IGS-Vw-6iw" appends="YES" id="o8K-ko-eXb"/>
+                                </connections>
                             </collectionView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="inp-nY-PAs">
                                 <rect key="frame" x="24" y="719" width="345" height="56"/>
@@ -115,10 +123,14 @@
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                <connections>
+                                    <action selector="selectMode:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="4nM-nW-GCy"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="9XC-kV-5DO" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="29" id="170-mB-4pf"/>
                             <constraint firstItem="inp-nY-PAs" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="531-lx-24L"/>
@@ -155,10 +167,16 @@
                         <outlet property="scheduleCollectionView" destination="x3k-vN-8Dx" id="YlS-pr-xRc"/>
                         <outlet property="timeStackView" destination="9XC-kV-5DO" id="nMk-S3-t6E"/>
                         <outlet property="titleLabel" destination="xR8-7L-mpA" id="mR4-Si-Fh5"/>
+                        <outlet property="toggleButton" destination="inp-nY-PAs" id="LQB-Rh-NSK"/>
                         <outlet property="weekdayStackView" destination="NdA-bV-14a" id="bfW-HC-UcL"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <panGestureRecognizer minimumNumberOfTouches="1" id="IGS-Vw-6iw">
+                    <connections>
+                        <action selector="timeCellDragGesture:" destination="Y6W-OH-hqX" id="mAa-lk-6Se"/>
+                    </connections>
+                </panGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="130.53435114503816" y="-2.1126760563380285"/>
         </scene>
